# millracer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/millracer/: __init__.py  __main__.py  agent.py  benchmark.py  cli.py  command.py  decision.py  intake.py  millrace.py  monitor.py  operator.py  ops_models.py  ops_service.py  pi.py  pi_rpc.py  prompts.py  scope.py  sessions.py  workspaces.py
tests/: test_agent.py  test_benchmark.py  test_cli.py  test_decision.py  test_intake.py  test_millrace.py  test_monitor.py  test_operator.py  test_ops_models.py  test_ops_service.py  test_pi.py  test_prompts.py  test_sessions.py  test_workspaces.py
tests/fixtures/ops/: enqueue_request.json  incomplete_scoped_result.json  legacy_request.json  status_request.json  status_result.json
