[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millracer"
version = "0.1.0"
description = "Pi-backed Millrace-aware benchmark harness and agent shim."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Tim Osterhus" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
millracer = "millracer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/millracer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
